# django-css-admin

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  manage.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: project.yml  project_mgmt.yml
changelogs/: 1.misc.md  2.misc.md
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
django_css_admin/: __init__.py  conftest.py
django_css_admin/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
django_css_admin/templates/: base.html
django_css_admin/users/: adapters.py  apps.py  models.py  views.py
django_css_admin/users/api/: serializers.py  views.py
django_css_admin/users/migrations/: 0001_initial.py
django_css_admin/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_urls.py  test_views.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt
